--- a/Week 1/Day 3/scss-demo/styles/scss/partials/_features.scss
+++ b/Week 1/Day 3/scss-demo/styles/scss/partials/_features.scss
@@ -25,16 +25,23 @@
         background-color: $white;
         box-shadow: 0 0 0.5rem rgba($black, 0.1);
         transition: transform 0.2s ease-in-out;
-        width: 100%;
+        // width: 100%;
+        max-width: 304px;
 
         &:hover {
             transform: translateY(-0.5rem);
         }
 
-        &-icon {
-            width: 3rem;
-            height: 3rem;
-            fill: $primary;
+        // &-icon {
+        //     // width: 3rem;
+        //     // height: 3rem;
+        //     // fill: $primary;
+        // }
+
+        &-info {
+            display: flex;
+            flex-direction: column;
+            gap: $gap-small;
         }
 
         &-title {
